--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "local-time": "^2.1.0",
     "stimulus": "^1.1.1",
     "trix": "^1.2.0",
-    "turbolinks": "^5.2.0",
-    "uikit": "^3.5.4"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
