--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,4 +1,4 @@
-secrets:
-  SECRET_KEY_BASE: <%= ENV['SECRET_KEY_BASE'] %>
+production:
+  secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
 development:
   send_api_key: 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
